--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -1,19 +1,23 @@
 
 $BlackColor : black ;
     .menu-header{
+        width: 90%;
         display: block;
-        width: 200px;
-        height: 800px;
-        // height: 185px;
-        border-right: solid 2px #333;
-        padding-right: 10px;
-        float: left;
-        margin: 20px;
-        p{
-            border-bottom: 1px solid #333;
-            font-size: 20px;
+        margin-top: 30px;
+        height: auto;
+        margin: auto;
+        // background-color: beige;
+        a{
+            // border-bottom: 1px solid #333;
+            display: block;
+            font-size: 15px;
             text-transform: uppercase;
             font-weight: bold;
+            margin: 0;
+            padding: 10px;       
+        }
+        a:hover{
+            background-color: #949292;
         }
     }
    
@@ -21,19 +25,18 @@ $BlackColor : black ;
         width: 100%;
         display: inline-block;
         height: 70px;
-        border-bottom: 1px solid #333;
+        
         h3{
             float: left;
-            margin-left: 30px;
             a{
-                color: green;
+                color: #333;
                 font-size: 30px;
          
             }
         }
         p{
             float: right;
-            margin-right: 30px;
+            margin: 20px;
             a{
                 color: $BlackColor;
                 font-weight: bold;
