--- a/client/app/src/pages/home/_home.scss
+++ b/client/app/src/pages/home/_home.scss
@@ -1,9 +1,53 @@
-
-.content{
-    width: 100%;
-    height: auto;
-    display: inline-block;
-    margin: 0;
+.style-layout{
+   width: 100%; 
+   display: block;
+   height: auto;
+   margin: 0;
+   padding: 0;
+   background-color: #fff;
+  
 }
-
+.Outlet{
+    width: 85%;
+    display: block;
+    float: left;
+    height: 100%;
+    table{
+        border: 1px solid #cac5c5;
+        margin: 0;
+        background-color: #f0efef;
+        margin-left: 20px;
+    }
+    padding-top: 20px;
+}
+.header_style{
+    width: 100%;
+    text-align: center;
+    color: #333;
+    height: 70px;
+    line-Height: 50px;
+    background-color: #f5f5f5;
+    margin-bottom: 10px;
+    
+}
+.sider_style{
+    width: 15%;
+    height: 100%;
+    text-align: center;
+    // line-height: 20px;
+    color: #333;
+    float: left;
+    background-color: #d4d0d0;
+}
+.content_style{
+    display: block;
+    width: 100%;
+    height: 1000px;
+    text-align: center;
+    line-height: 20px;
+    color: #333;
+    float: left;
+    background-color: #fff;
+    min-height: 20px;
+}
 
