--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -17,17 +17,23 @@ $BlackColor : black ;
             padding: 10px;       
         }
         a:hover{
-            background-color: #949292;
+            background-color: rgb(167, 163, 163);
+            font-size: 17px;
         }
     }
    
     .header{
         width: 100%;
         display: inline-block;
-        height: 70px;
+        // text-align: center;
+        color: #333;
+        line-Height: 50px;
+        background-color: #f5f5f5;
         
         h3{
             float: left;
+            margin-left: 30px;
+            display: inline;
             a{
                 color: #333;
                 font-size: 30px;
