--- a/client/app/src/pages/home/_home.scss
+++ b/client/app/src/pages/home/_home.scss
@@ -8,10 +8,12 @@
   
 }
 .Outlet{
-    width: 85%;
+    width: 80%;
     display: block;
     float: left;
     height: 100%;
+    margin: auto;
+    position: relative;
     table{
         border: 1px solid #cac5c5;
         margin: 0;
@@ -20,16 +22,7 @@
     }
     padding-top: 20px;
 }
-.header_style{
-    width: 100%;
-    text-align: center;
-    color: #333;
-    height: 70px;
-    line-Height: 50px;
-    background-color: #f5f5f5;
-    margin-bottom: 10px;
-    
-}
+
 .sider_style{
     width: 15%;
     height: 100%;
@@ -42,12 +35,13 @@
 .content_style{
     display: block;
     width: 100%;
-    height: 1000px;
+    height: 1200px;
     text-align: center;
     line-height: 20px;
     color: #333;
     float: left;
     background-color: #fff;
+    // background-image: url("https://www.w3schools.com/w3images/woods.jpg");
     min-height: 20px;
 }
 
