--- a/client/app/src/pages/home/_home.scss
+++ b/client/app/src/pages/home/_home.scss
@@ -12,15 +12,15 @@
     display: block;
     float: left;
     height: 100%;
-    margin: auto;
+    margin-left: 20px;
     position: relative;
     table{
         border: 1px solid #cac5c5;
         margin: 0;
-        background-color: #f0efef;
-        margin-left: 20px;
+        background-color: #d4d0d0;
     }
-    padding-top: 20px;
+    padding-top: 20px;  
+    // background-color: #f3f3f3;
 }
 
 .sider_style{
