--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -6,26 +6,25 @@ $BlackColor : black ;
         margin-top: 30px;
         height: auto;
         margin: auto;
-        // background-color: beige;
         a{
-            // border-bottom: 1px solid #333;
             display: block;
             font-size: 15px;
             text-transform: uppercase;
             font-weight: bold;
             margin: 0;
-            padding: 10px;       
+            padding: 15px; 
+            color: #333;      
         }
         a:hover{
             background-color: rgb(167, 163, 163);
             font-size: 17px;
+            color: #333;
         }
     }
    
     .header{
         width: 100%;
         display: inline-block;
-        // text-align: center;
         color: #333;
         line-Height: 50px;
         background-color: #f5f5f5;
