--- a/client/app/src/component/content/_content.scss
+++ b/client/app/src/component/content/_content.scss
@@ -7,8 +7,8 @@
 }
 .create{
     position: absolute;
-    top: 35px;
-    right: 80px;
+    top: 55px;
+    right: 10px;
     a{
        font-size: 17px;
        font-weight: bold;
@@ -29,6 +29,19 @@
         border-bottom: solid 1px #9c9696;
         padding-bottom: 10px;
         margin-bottom: 50px;
+    }
+}
+.search{
+    position: absolute;
+    top: 0;
+    right:0;
+    margin-bottom: 20px;
+    input{
+        width: 200px;
+        height: 30px;
+    }
+    button{
+       height: 35px;
     }
 }
 
