--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -24,10 +24,11 @@ $BlackColor : black ;
    
     .header{
         width: 100%;
+        margin: auto;
         display: inline-block;
         color: #333;
         line-Height: 50px;
-        background-color: #f5f5f5;
+        background-color: #d4d0d0;
         
         h3{
             float: left;
