--- a/client/app/src/component/content/_content.scss
+++ b/client/app/src/component/content/_content.scss
@@ -7,8 +7,9 @@
 }
 .create{
     position: absolute;
-    top: 55px;
+    top: 50px;
     right: 10px;
+    z-index: 1;
     a{
        font-size: 17px;
        font-weight: bold;
