--- a/client/app/src/pages/home/_home.scss
+++ b/client/app/src/pages/home/_home.scss
@@ -1,11 +1,11 @@
 .app{
-   width: 70%;   
+   width: 80%;   
    display: block;
    height: auto;
    margin: auto;
    padding: 0;
    background-color: #fff;
-   border: 1px solid #aca9a9;
+   border: 1px solid #cac5c5;
 }
 .Outlet{
     width: 83%;
@@ -29,7 +29,6 @@
     color: #333;
     float: left;
     background-color: #d4d0d0;
-    position: relative;
 }
 .content_style{
     display: block;
@@ -45,7 +44,7 @@
 }
 .footer{
     width: 100%;
-    background-color: rgb(126, 126, 126);
+    background-color: rgb(135, 134, 139);
     text-align: center;
     
     // height: 100px;
