--- a/client/app/src/component/content/_content.scss
+++ b/client/app/src/component/content/_content.scss
@@ -7,13 +7,18 @@
 }
 .create{
     position: absolute;
-    top: 50px;
-    right: 10px;
+    top: 30px;
+    right: 30px;
     z-index: 1;
+    background-color: #3e680e;
+    padding: 5px 10px;
+    border-radius: 10%;
+   
     a{
-       font-size: 17px;
-       font-weight: bold;
-       color: green;
+    //    font-size: 17px;
+    //    font-weight: bold;
+       color: #fff;
+       text-decoration: none;
     }
 }
 .read{
@@ -33,17 +38,21 @@
     }
 }
 .search{
-    position: absolute;
-    top: 0;
-    right:0;
-    margin-bottom: 20px;
-    input{
-        width: 220px;
-        height: 30px;
-    }
+    width: 100%;
+    text-align: right;
+    display: block;
+    margin-bottom: 5px;
     button{
-       height: 35px;
+        height: 32px;
+     }
+    input{
+        width: 200px;
     }
+    
+}
+.table-style{
+    display: block;
+    width: 100%;
 }
 
 
