--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -4,6 +4,7 @@ $BlackColor : black ;
         width: 90%;
         display: block;
         margin-top: 30px;
+        padding: 20px 0px 20px;
         height: auto;
         margin: auto;
         a{
