--- a/client/app/src/component/content/_content.scss
+++ b/client/app/src/component/content/_content.scss
@@ -12,30 +12,28 @@
     z-index: 1;
     background-color: #3e680e;
     padding: 5px 10px;
-    border-radius: 10%;
-   
+    border-radius: 5%;
     a{
-    //    font-size: 17px;
-    //    font-weight: bold;
        color: #fff;
        text-decoration: none;
     }
 }
 .read{
-    width: 100%;
+    width: 50%;
+    display: block;
+    text-align: center;
+    margin-left: 250px;
     form{
-        margin-top: 30px;
-        display: block;
+        padding-left: 200px;
     }
     h1{
-        text-align: center;
-        width: 250px;
-        margin-left: 250px;
         color: #777676;
-        border-bottom: solid 1px #9c9696;
         padding-bottom: 10px;
-        margin-bottom: 50px;
+        padding-right: 200px;
     }
+}
+.add-new{
+    @extend .read;
 }
 .search{
     width: 100%;
@@ -50,9 +48,9 @@
     }
     
 }
-.table-style{
-    display: block;
-    width: 100%;
-}
+// .table-style{
+//     display: block;
+//     width: 100%;
+// }
 
 
