--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -1,53 +1,63 @@
 
 $BlackColor : black ;
-    .menu-header{
-        width: 90%;
-        display: block;
-        margin-top: 30px;
-        padding: 20px 0px 20px;
-        height: auto;
+    .Menu-header{
         margin: auto;
-        a{
-            display: block;
-            font-size: 15px;
-            text-transform: uppercase;
-            font-weight: bold;
-            margin: 0;
-            padding: 15px; 
-            color: #333;      
-        }
-        a:hover{
-            background-color: rgb(167, 163, 163);
-            font-size: 17px;
-            color: #333;
+        background-color: #d4d0d0;
+        font-size: 17px;
+        font-weight: bold;
+        border-radius: 10px;
+            a{
+                font-size: 17px;
+                font-weight: bold;
+            }
+        .SubMenu1{
+            a{
+                font-size: 15px;    
+            }
         }
     }
    
     .header{
         width: 100%;
+        height: auto;
         margin: auto;
         display: inline-block;
         color: #333;
-        line-Height: 50px;
         background-color: #d4d0d0;
-        
-        h3{
+        padding: 0;
+        top: 0;
+        left: 0;
+        .nav{
+            display: block;
+            width: 50%;
             float: left;
-            margin-left: 30px;
-            display: inline;
-            a{
-                color: #333;
-                font-size: 30px;
-         
+            ul{
+                li{
+                    display: inline-block;
+                    margin-left: 20px;
+                    a{
+                        text-decoration: none;
+                        color: #333;
+                        font-size: 25px;
+                        font-weight: bold;
+                        padding: 0px 10px;
+                        border-bottom: 1px solid #333;
+                    }
+                }
             }
         }
-        p{
+        .nav-right{
+            width: 20%;
+            display: block;
             float: right;
-            margin: 20px;
-            a{
-                color: $BlackColor;
-                font-weight: bold;
-                font-size: 18px;
+            p{
+                float: right;
+                margin: 20px;
+                a{
+                    color: $BlackColor;
+                    font-weight: bold;
+                    font-size: 18px;
+                }
             }
         }
     }
