--- a/client/app/src/component/content/_content.scss
+++ b/client/app/src/component/content/_content.scss
@@ -12,7 +12,7 @@
     position: absolute;
     margin: 0;
     top: 60px;
-    right: 50px;
+    right:10px;
     z-index: 1;
     a{
        color: green;
@@ -41,7 +41,7 @@
     @extend .read;
 }
 .search{
-    width: 15%;
+    width: 250px;
     float: right;
     display: block;
     margin-bottom: 5px;
@@ -50,3 +50,11 @@
 
 
 
+@media screen and (max-width: 820px) {
+    .create {
+        top: 10px;
+        right: inherit;
+        
+    }
+    
+}
