--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -1,6 +1,7 @@
 
 $BlackColor : black ;
     .Menu-header{
+        width: 95% !important;
         margin: auto;
         background-color: #d4d0d0;
         font-size: 17px;
@@ -9,6 +10,7 @@ $BlackColor : black ;
             a{
                 font-size: 17px;
                 font-weight: bold;
+                margin: auto;
             }
         .SubMenu1{
             a{
@@ -16,7 +18,7 @@ $BlackColor : black ;
             }
         }
     }
-   
+    
     .header{
         width: 100%;
         height: auto;
@@ -29,7 +31,7 @@ $BlackColor : black ;
         left: 0;
         .nav{
             display: block;
-            width: 50%;
+            width: 70%;
             float: left;
             ul{
                 li{
@@ -47,12 +49,14 @@ $BlackColor : black ;
             }
         }
         .nav-right{
-            width: 20%;
+            width: 30%;
             display: block;
-            float: right;
+            float: left;
+            text-align: right;
             p{
-                float: right;
+                // float: right;
                 margin: 20px;
+                display: inline-block;
                 a{
                     color: $BlackColor;
                     font-weight: bold;
@@ -63,5 +67,56 @@ $BlackColor : black ;
     }
 
   
-   
+@media screen and (max-width: 820px) {
+        .Menu-header {
+            width: 40%;
+            font-size: 14px; 
+            border-radius: 5px;
+            a{
+                font-size: 15px;
+            }
+        }
+        .header{
+            ul{
+                padding: 0;
+            }
+            .nav{
+                ul{
+                    li{
+                        a{
+                            font-size: 20px;
+                        }
+                    }
+                }
+                
+            }
+        }
+        
+}
+@media screen and (max-width: 400px) {
+    // .Menu-header {
+    //     width: 40%;
+    //     font-size: 14px; 
+    //     border-radius: 5px;
+    //     a{
+    //         font-size: 15px;
+    //     }
+    // }
+    // .header{
+    //     ul{
+    //         padding: 0;
+    //     }
+    //     .nav{
+    //         ul{
+    //             li{
+    //                 a{
+    //                     font-size: 20px;
+    //                 }
+    //             }
+    //         }
+            
+    //     }
+    // }
+    
+}
     
