--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -3,10 +3,11 @@ $BlackColor : black ;
     .Menu-header{
         width: 95% !important;
         margin: auto;
-        background-color: #d4d0d0;
+        background-color: #ffffff;
         font-size: 17px;
         font-weight: bold;
         border-radius: 10px;
+        text-align: left;
             a{
                 font-size: 17px;
                 font-weight: bold;
