--- a/client/app/src/component/content/Builder-folder/style.scss
+++ b/client/app/src/component/content/Builder-folder/style.scss
@@ -1,37 +1,53 @@
 
 .folder-main{
     display: block;
-    width: 50%;
+    width: 78%;
     float: left;
     height: auto;
-    margin-top: 50px;
+    // margin-top: 50px;
     text-align: left;
+    // margin: 0;
+    padding: 0;
     // background-color: antiquewhite;
     .folder-style{
         padding: 20px;
-        background-color: rgb(238, 230, 220);
+        background-color: rgb(226, 229, 231);
     }
 }
 .c-c{
-    width: 100%;
+    width:93%;
     margin: 0;
     padding: 0;
     display: block;
-    ul{
-        padding: 0;
-        margin: 0;
-        li{
-            display: inline-block;  
+        p{
+            display: inline-block;
             a{
                 color: #fff;
                 font-size: 15px;
                 padding: 8px;
-                margin-left: 10px;
+                margin-right: 10px;
                 background-color: rgb(57, 107, 245);
                 border-radius: 7px;
-            }
+            } 
         }
-    }
+        .filter{
+            float: right;
+        }
+        .search-folder{
+            float: left;
+            margin-bottom: 10px;
+        }
+            
+}
+.tree-table{
+    width: 90%;
+    display: inline-block;
+    background-color: #fff;
+    padding: 25px;
+}
+.tree-folder{
+    width: 35%;
+    display: inline-block;
 }
 .choose{
     p{
@@ -45,6 +61,14 @@
             background-color: rgb(170, 33, 33);
         }
     }
+}
+.table-folder{
+    display: block;
+    width: 55%;
+    float: right;
+    border: 1px solid #cac5c5;
+    padding: 10px;
+
 }
 
 @media screen and (max-width: 820px){
