--- a/client/app/src/styles/style.scss
+++ b/client/app/src/styles/style.scss
@@ -2,14 +2,14 @@
 @import 'content';
 @import 'home';
 
-@media screen and (max-width: 1024px) {
-    .app{
-        width: 100%;
-    }
-    .sider_style{
-        width: 50%;
-    } 
-    .folder-main{
-        width: 50%;
-    }   
-}
+// @media screen and (max-width: 1024px) {
+//     .app{
+//         width: 100%;
+//     }
+//     .sider_style{
+//         width: 50%;
+//     } 
+//     .folder-main{
+//         width: 50%;
+//     }   
+// }
