--- a/client/app/src/component/content/Builder-folder/style.scss
+++ b/client/app/src/component/content/Builder-folder/style.scss
@@ -4,18 +4,17 @@
     width: 78%;
     float: left;
     height: auto;
-    // margin-top: 50px;
+    margin-left: 1%;
     text-align: left;
-    // margin: 0;
-    padding: 0;
-    // background-color: antiquewhite;
+    background-color: #e7e7e7;
     .folder-style{
         padding: 20px;
         background-color: rgb(226, 229, 231);
     }
+    
 }
 .c-c{
-    width:93%;
+    width:100%;
     margin: 0;
     padding: 0;
     display: block;
@@ -39,11 +38,16 @@
         }
             
 }
+.choose{
+    width: 70%;
+    float: left;
+    margin-left: 3%;
+}
 .tree-table{
-    width: 90%;
+    width: 96%;
     display: inline-block;
     background-color: #fff;
-    padding: 25px;
+    padding: 2%;
 }
 .tree-folder{
     width: 35%;
@@ -64,11 +68,23 @@
 }
 .table-folder{
     display: block;
-    width: 55%;
+    width: 60%;
     float: right;
-    border: 1px solid #cac5c5;
+    border: 1px solid #dbd8d8;
     padding: 10px;
-
+    table{
+        background-color: #e7e7e7;
+    }
+}
+.edit-folder{
+    width: 70%;
+    float: left;
+    margin: auto;
+    form{
+        margin: auto;
+        margin-top: 20px;
+        
+    }
 }
 
 @media screen and (max-width: 820px){
