--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -1,9 +1,9 @@
 
 $BlackColor : black ;
-    .Menu-header{
-        width: 95% !important;
-        margin: auto;
-        background-color: #ffffff;
+    .menu-header{
+        width: 90% !important;
+        margin: auto;   
+        background-color: #e7e4e4;
         font-size: 17px;
         font-weight: bold;
         border-radius: 10px;
@@ -13,11 +13,6 @@ $BlackColor : black ;
                 font-weight: bold;
                 margin: auto;
             }
-        .SubMenu1{
-            a{
-                font-size: 15px;    
-            }
-        }
     }
     
     .header{
