--- a/client/app/src/pages/home/_home.scss
+++ b/client/app/src/pages/home/_home.scss
@@ -12,73 +12,76 @@
     width: 78%;
     display: block;
     float: left;
-    height: 100%;
+    height: auto;
     margin-left: 1%;
-    position: relative;
+    // position: relative;
     margin-top: 10px;
-  
+    
     table{
         border: 1px solid #cac5c5;
-        margin: 0;
+        margin: auto;
         background-color: #d4d0d0;
         th{
             font-size: 17px;
         }
         
-    }  
-}
-.sider_style{
-    width: 20%;
-    height: auto;
-    text-align: center;
-    color: #333;
-    float: left;
-    // background-color: #d4d0d0;
-    // margin-top: 45px;
-    // border-radius: 10%;
+    } 
+    h1{
+       text-align: left;
+      
+    } 
 }
 
-.content_style{
-    display: block;
-    width: 100%;
-    margin: auto;
-    height: 1000px;
-    text-align: center;
-    line-height: 20px;
-    color: #333;
-    float: left;
-    background-color: #e7e7e7;
-    min-height: 20px;
-    // position: sticky;
-    // top: 120px;
-    overflow: auto;
-}
-// @media screen and (max-width: 390px) {
-//     .app{
-//         width: 100%;
-//     }
-//     .sider_style{
-//         width: 30%;
-//     } 
-//     .folder-main{
-//         width: 100%;
-//     }   
-// }
-.footer {
-    margin:0 auto;
-    width:100%;
-    height:auto;
-    overflow:hidden;
-    text-align: center;
-    line-height: 80px;
-    background-color: #cac5c5;
-}
 .No-page{
     font-size: 70px;
     text-align: center;
     margin-top: 300px;
     font-weight: bold;
 }
+
+html, body {
+    height: 100%;
+    margin: 0;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    min-height: 92vh; /* Đảm bảo container có ít nhất chiều cao của màn hình */
+    box-sizing: border-box; /* Include padding and border in the element's total height and width */
+}
+
+.sider_style{
+    width: 20%;
+    height: auto;
+    text-align: center;
+    color: #333;
+    float: left;
+    background-color: #fff;
+    height: 84vh;
+    
+}
+.content_style {
+    flex: 1; /* Phần nội dung mở rộng để lấp đầy phần còn lại của container */
+    display: block;
+    width: 100%;
+    margin: auto;
+    height: auto;
+    text-align: center;
+    line-height: 20px;
+    color: #333;
+    background-color: #e7e7e7;
+    min-height: 20px;
+}
+
+.footer {
+    width: 100%;
+    line-height: 80px;
+    background-color: #cac5c5;
+    text-align: center;
+}
+
+
 
   
 @media screen and (max-width: 820px) {
