--- a/client/app/src/component/content/Builder-folder/style.scss
+++ b/client/app/src/component/content/Builder-folder/style.scss
@@ -29,8 +29,9 @@
                 border-radius: 7px;
             } 
         }
-        .filter{
+        .add{
             float: right;
+            text-align: right;
         }
         .search-folder{
             float: left;
