--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -21,10 +21,14 @@ $BlackColor : black ;
         margin: auto;
         display: inline-block;
         color: #333;
-        background-color: #d4d0d0;
+        background-color: #cac5c5;
         padding: 0;
         top: 0;
         left: 0;
+        line-height: 80px;
+        position: sticky;
+        top: 0;
+        z-index: 999;
         .nav{
             display: block;
             width: 70%;
