--- a/client/app/src/pages/home/_home.scss
+++ b/client/app/src/pages/home/_home.scss
@@ -1,21 +1,22 @@
 
 .app{
    width: 100%;   
+   height: 100%;
    display: block;
    height: auto;
    margin: auto;
    padding: 0;
-   background-color: #fff;
-//    border: 1px solid #cac5c5;    
+   background-color: #fff;    
 }
 .table-style{
-    width: 78%;
+    width: 96%;
     display: block;
     float: left;
     height: auto;
-    margin-left: 1%;
+    // margin-left: 1%;
     // position: relative;
-    margin-top: 10px;
+    // margin-top: 10px;
+    padding:0 2% 2% 2% ;
     button{
         text-align: left;
     }
@@ -47,41 +48,44 @@ html, body {
 }
 
 .container {
-    display: flex;
+    width: 100%;
+    display: block;
     flex-direction: column;
-    min-height: 92vh; /* Đảm bảo container có ít nhất chiều cao của màn hình */
-    box-sizing: border-box; 
-    /* Include padding and border in the element's total height and width */
+    min-height: 88vh; 
+    box-sizing: border-box;
+    position: relative; 
+    padding-bottom: 80px;
+    height: auto;    
 }
 
 .sider_style{
     width: 20%;
-    height: auto;
+    height: 100%;
     text-align: center;
     color: #333;
     float: left;
     background-color: #fff;
-    height: 84vh;
-    // flex-shrink: 0;
 }
 .content_style {
-    flex: 1; /* Phần nội dung mở rộng để lấp đầy phần còn lại của container */
+    // flex: 1;
     display: block;
-    width: 100%;
-    margin: auto;
+    float: right;
+    width: 80%;
+    margin: 0;
     height: auto;
     text-align: center;
-    line-height: 20px;
-    color: #333;
     background-color: #e7e7e7;
-    min-height: 20px;
 }
 
 .footer {
     width: 100%;
-    line-height: 80px;
+    position:fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 999;
     background-color: #cac5c5;
     text-align: center;
+    line-height: 80px;
 }
 
 
