--- a/client/app/src/component/content/Builder-folder/style.scss
+++ b/client/app/src/component/content/Builder-folder/style.scss
@@ -54,7 +54,7 @@
     padding: 2%;
 }
 .tree-folder{
-    width: 35%;
+    width: 30%;
     display: inline-block;
 }
 .choose{
@@ -72,7 +72,7 @@
 }
 .table-folder{
     display: block;
-    width: 60%;
+    width: 65%;
     float: right;
     border: 1px solid #dbd8d8;
     padding: 10px;
@@ -82,12 +82,14 @@
 }
 .edit-folder{
     width: 70%;
-    float: left;
-    margin: auto;
+    text-align: left;
+    margin-left: 100px;
+    h1{
+        text-align: center;
+        margin-left: 200px;
+    }
     form{
         margin: auto;
-        margin-top: 20px;
-        
     }
 }
 
