--- a/client/app/src/pages/home/_home.scss
+++ b/client/app/src/pages/home/_home.scss
@@ -1,21 +1,19 @@
 
 .app{
-   width: 100%;   
-   height: 100%;
-   display: block;
-   height: auto;
-   margin: auto;
-   padding: 0;
-   background-color: #fff;    
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    background-color: #fff;  
 }
 .table-style{
     width: 96%;
     display: block;
     float: left;
     height: auto;
-    // margin-left: 1%;
-    // position: relative;
-    // margin-top: 10px;
     padding:0 2% 2% 2% ;
     button{
         text-align: left;
@@ -26,8 +24,7 @@
         background-color: #d4d0d0;
         th{
             font-size: 17px;
-        }
-        
+        }    
     } 
     h1{
        text-align: left;
@@ -49,13 +46,11 @@ html, body {
 
 .container {
     width: 100%;
-    display: block;
-    flex-direction: column;
-    min-height: 88vh; 
+    flex: 1;
     box-sizing: border-box;
-    position: relative; 
-    padding-bottom: 80px;
-    height: auto;    
+    position: relative;
+    padding-bottom: 100px;
+
 }
 
 .sider_style{
@@ -67,7 +62,6 @@ html, body {
     background-color: #fff;
 }
 .content_style {
-    // flex: 1;
     display: block;
     float: right;
     width: 80%;
@@ -79,13 +73,10 @@ html, body {
 
 .footer {
     width: 100%;
-    position:fixed;
-    bottom: 0;
-    left: 0;
-    z-index: 999;
     background-color: #cac5c5;
     text-align: center;
     line-height: 80px;
+    margin-top: auto;
 }
 
 
