--- a/client/app/src/component/content/Builder-folder/style.scss
+++ b/client/app/src/component/content/Builder-folder/style.scss
@@ -5,33 +5,32 @@
     float: left;
     height: auto;
     text-align: left;
-    background-color: #e7e7e7;
+    background-color: #ecebeb;
     padding: 0 2% 2% 2%;
     .folder-style{
         padding: 20px;
         background-color: rgb(226, 229, 231);
     }
-    
+    h1{
+        margin: 30px 0px;
+    }
 }
 .c-c{
     width:100%;
-    margin: 0;
-    // padding:0 2%;
     display: block;
         p{
-            display: inline-block;
+            display: block;
             a{
                 color: #fff;
                 font-size: 15px;
-                padding: 8px;
-                margin-right: 10px;
+                padding: 10px;
+                // margin-right: 10px;
                 background-color: rgb(57, 107, 245);
                 border-radius: 7px;
             } 
         }
         .add{
             float: right;
-            text-align: right;
         }
         .search-folder{
             float: left;
@@ -39,6 +38,7 @@
         }
         .search-form{
             float: left;
+            width: 240px;
         }
             
 }
@@ -52,10 +52,13 @@
     display: inline-block;
     background-color: #fff;
     padding: 2%;
+    margin-top: 10px;
 }
 .tree-folder{
     width: 30%;
     display: inline-block;
+    border: solid 1px #ccc9c9;
+    border-radius: 6px;
 }
 .choose{
     p{
@@ -80,13 +83,15 @@
         background-color: #e7e7e7;
     }
 }
-.edit-folder{
+.edit-create{
     width: 70%;
     text-align: left;
     margin-left: 100px;
+    background-color: #ecebeb;
     h1{
         text-align: center;
         margin-left: 200px;
+        padding: 30px 0px;
     }
     form{
         margin: auto;
@@ -95,6 +100,37 @@
 
 @media screen and (max-width: 820px){
     .folder-main{
-        width: 60%;
+        width: 100%;
+        padding: 0;
+        h1{
+            font-size: 25px;
+        }
+    }
+    .c-c{
+        width: 100%;
+        
+    .search-form{
+        width: 200px;
+    }
+    .add{
+        a{
+            font-size: 12px;
+        }
+        
+    }
+    
+    }
+    .tree-table{
+        width: 96%;
+    }
+    .tree-folder{
+        width: 25%;
+        padding: 0;
+        .folder-style{
+            padding: 0;
+        }
+    }
+    .table-folder{
+        width: 70%;
     }
 }
