--- a/client/app/src/component/content/_content.scss
+++ b/client/app/src/component/content/_content.scss
@@ -16,15 +16,14 @@
             a{
                 color: #fff;
                 font-size: 15px;
-                padding: 6px;
-                // margin-right: 30px;
-                // margin-bottom: 0;
+                padding: 10px;
                 background-color: rgb(31, 154, 226);
                 border-radius: 7px;
             } 
         }
         .search{
             float: left;
+            width: 240px;
         } 
    }
 
@@ -53,7 +52,6 @@
     width: 80%;
     display: block;
     text-align: center;
-    // margin-left: 250px;
     h1{
         color: #494545;
         text-align: center
@@ -62,7 +60,6 @@
 .edit-lop{
     width: 90%;
     text-align: center;
-    // display:block;
     margin: auto;
     form{
         margin:auto;
@@ -74,24 +71,35 @@
         margin: auto;
     }
 }
-.table-form{
+.table-main{
     display: block;
-    padding: 2%;
-    width: 96%;
+    margin-top: 10px;
+    // padding:10px 2%;
+    // padding-top: 10px;
+    width: 100%;
     float: right;
-    border: 1px solid #dbd8d8;
-    background-color: #fff;
-    .table{
-        background-color: #fff;
-        width: 100%;
-    }
+    // border: 1px solid #dbd8d8;
+    // background-color: #ecebeb;
+    
+}
+.del-f{
+    text-align: left;
+    margin-bottom: 10px;
 }
 
 @media screen and (max-width: 820px) {
-    .create {
-        top: 10px;
-        right: inherit;
-        
+    .app{
+        width: 100%;
     }
-    
+    .s-c{
+        width: 100%;
+        .create{
+            a{
+                font-size: 12px;
+            }
+        }
+        .search{
+            width: 200px;
+        }
+    }
 }
