--- a/client/app/src/components/header/_header.scss
+++ b/client/app/src/components/header/_header.scss
@@ -1,12 +1,12 @@
 
 $BlackColor : black ;
     .menu-header{
-        width: 90% !important;
+        width: 100%;
         margin: auto;   
-        background-color: #e7e4e4;
+        background-color: #fff;
         font-size: 17px;
         font-weight: bold;
-        border-radius: 10px;
+        // border-radius: 10px;
         text-align: left;
             a{
                 font-size: 17px;
@@ -19,9 +19,8 @@ $BlackColor : black ;
         width: 100%;
         height: auto;
         margin: auto;
-        display: inline-block;
-        color: #333;
-        background-color: #cac5c5;
+        display: flex;
+        background-color: #757474;
         padding: 0;
         top: 0;
         left: 0;
@@ -29,38 +28,54 @@ $BlackColor : black ;
         position: sticky;
         top: 0;
         z-index: 999;
-        .nav{
-            display: block;
-            width: 70%;
-            float: left;
+        .nav_center{
+            width:50%;
+            text-align: right;
+            padding-top: 10px;
             ul{
+                // padding-right: 50px;
                 li{
                     display: inline-block;
-                    margin-left: 20px;
+                    padding-right: 20px;
                     a{
                         text-decoration: none;
-                        color: #333;
+                        color: #fff;
                         font-size: 25px;
                         font-weight: bold;
                         padding: 0px 10px;
-                        border-bottom: 1px solid #333;
+                        // border-bottom: 1px solid #333;
                     }
                 }
             }
         }
-        .nav-right{
-            width: 30%;
-            display: block;
+        .nav_icon{
+            width: 19%;
             float: left;
+            padding-left: 1%;
+            padding-top: 10px;
+            text-align: left;
+            a{
+                text-decoration: none;
+                color: #fff;
+                font-size: 35px;
+                font-weight: bold;
+                // padding: 10px;
+            }
+        }
+        .nav_right{
+            width: 30%;
             text-align: right;
-            p{
-                // float: right;
-                margin: 20px;
-                display: inline-block;
-                a{
-                    color: $BlackColor;
-                    font-weight: bold;
-                    font-size: 20px;
+            ul{
+                padding-top: 13px ;
+                li{
+                    display: inline-block;
+                    padding-right: 20px;
+                    a{
+                        text-decoration: none;
+                        color: #fff;
+                        font-size: 20px;
+                        // font-weight: bold;
+                    }
                 }
             }
         }
@@ -68,55 +83,40 @@ $BlackColor : black ;
 
   
 @media screen and (max-width: 820px) {
-        .Menu-header {
-            width: 40%;
-            font-size: 14px; 
-            border-radius: 5px;
+    .header{
+        width: 100%;
+        .nav_icon{
+            width: 20%; 
             a{
-                font-size: 15px;
+                font-size: 25px;
             }
         }
-        .header{
+        .nav_center{
+            width: 50%;
             ul{
-                padding: 0;
-            }
-            .nav{
-                ul{
-                    li{
-                        a{
-                            font-size: 20px;
-                        }
+                li{
+                    padding-right: 10px;
+                    a{
+                        font-size: 20px;
+                        padding: 0;
                     }
                 }
-                
             }
         }
-        
-}
-@media screen and (max-width: 400px) {
-    // .Menu-header {
-    //     width: 40%;
-    //     font-size: 14px; 
-    //     border-radius: 5px;
-    //     a{
-    //         font-size: 15px;
-    //     }
-    // }
-    // .header{
-    //     ul{
-    //         padding: 0;
-    //     }
-    //     .nav{
-    //         ul{
-    //             li{
-    //                 a{
-    //                     font-size: 20px;
-    //                 }
-    //             }
-    //         }
-            
-    //     }
-    // }
+        .nav_right{
+            width: 30%;
+            ul{
+                li{
+                    a{
+                        font-size: 15px;
+                    }
+                }
+            }
+        }
+    }
+    .menu-header{
+        line-height: 30px;
+    }
     
 }
-    
+
