--- a/client/app/src/pages/home/_home.scss
+++ b/client/app/src/pages/home/_home.scss
@@ -1,7 +1,11 @@
-
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
 .app{
     width: 100%;
-    height: auto;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -12,22 +16,25 @@
 .table-style{
     width: 96%;
     display: block;
-    float: left;
     height: auto;
-    padding:0 2% 2% 2% ;
+    float: left;
+    padding: 2% ;
+    margin: auto;
+    background-color: #ecebeb;
     button{
         text-align: left;
     }
     table{
         border: 1px solid #cac5c5;
         margin: auto;
-        background-color: #d4d0d0;
+        background-color: #fff;
         th{
             font-size: 17px;
         }    
     } 
     h1{
        text-align: left;
+       margin-bottom: 30px;
       
     } 
 }
@@ -46,36 +53,37 @@ html, body {
 
 .container {
     width: 100%;
+    display: block;
+    height: auto;
     flex: 1;
     box-sizing: border-box;
     position: relative;
-    padding-bottom: 100px;
+    background-color: #ecebeb;
 }
 
 .sider_style{
-    width: 20%;
+    width: 15%;
     height: 100%;
     text-align: center;
-    color: #333;
     float: left;
-    background-color: #fff;
-    // max-height: 70vh; 
-    // overflow-y: auto;
+    background-color: #fff; 
 }
 .content_style {
     display: block;
     float: right;
-    width: 80%;
+    width: 85%;
     margin: 0;
     height: auto;
     text-align: center;
-    background-color: #e7e7e7;
+    background-color: #ecebeb;
 } 
 
 .footer {
     width: 100%;
-    background-color: #cac5c5;
+    background-color: #757474;
     text-align: center;
+    color: #fff;
+    font-size: 25px;
     line-height: 80px;
     margin-top: auto;
 }
@@ -84,12 +92,42 @@ html, body {
 
   
 @media screen and (max-width: 820px) {
+    .app{
+        display: block;
+        min-height: 100vh;
+        height: auto;
+    }
     .sider_style {
-        width: 30%;
+        width: 100%;
         font-size: 14px; 
-        border-radius: 5px;
+        // border-radius: 5px;
+        padding-bottom: 30px;
     }
     .table-style{
-        width: 6%;
+        width: 100%;
+    }
+    .container{
+        width: 100%;
+        flex: 1;
+        box-sizing: border-box;
+        position: relative;
+        padding-bottom: 50px;
+    }
+    .content_style{
+        width: 100%;
+        padding: 0;
+        // background-color: #fff;
+    }
+    .footer{
+        width: 100%;
+        bottom: 0;
+    }
+    .table-style{
+        background-color: #fff;
+        padding: 0;
+        h1{
+            padding-top: 30px;
+            font-size: 25px;
+        }
     }
 }
