--- a/client/app/src/component/content/Builder-folder/style.scss
+++ b/client/app/src/component/content/Builder-folder/style.scss
@@ -85,6 +85,7 @@
 }
 .edit-create{
     width: 70%;
+    // height: 100%;
     text-align: left;
     margin-left: 100px;
     background-color: #ecebeb;
