--- a/client/app/src/pages/home/_pages.scss
+++ b/client/app/src/pages/home/_pages.scss
@@ -1,92 +1,164 @@
-.style_a{
-    text-decoration: none;
-    font-weight: bold;
-    .red-color{
-        color: rgb(211, 72, 72);
+.table-style{
+    width: 96%;
+    display: block;
+    height: auto;
+    float: left;
+    padding: 2% ;
+    margin: auto;
+    background-color: #ecebeb;
+    button{
+        text-align: left;
     }
+    table{
+        border: 1px solid #cac5c5;
+        margin: auto;
+        background-color: #fff;
+        th{
+            font-size: 17px;
+        }    
+    } 
+    h1{
+       text-align: left;
+       margin-bottom: 10px;
+      
+    } 
 }
 
-.search-create{
-    display: block;
-    width: 50%;
-    float: right;
-    margin-top: 10px;
-    height: auto;
-    .search-f{
-        float: right;
-    }
-    .create-f{
-        float: right;
-        a{
-            color: #fff;
-            font-size: 15px;
-            padding: 8px;
-            background-color: rgb(31, 154, 226);
-            border-radius: 7px;
-            margin-right: 30px;
-        } 
-    }
-}
-.read{
-    width: 80%;
-    display: block;
-    text-align: center;
-    h1{
-        color: #494545;
-        text-align: center
-    }
-}
-.edit-lop{
-    width: 90%;
-    text-align: center;
-    margin: auto;
-    form{
-        margin:auto;
-    }
-}
-.add-new{
-    @extend .read;
-    form{
-        margin: auto;
-    }
-}
 .table-main{
     display: block;
     margin-top: 10px;
-    // padding:10px 2%;
-    // padding-top: 10px;
     width: 100%;
     float: right;
     table{
         margin-top: 10px;
-    }
-    // border: 1px solid #dbd8d8;
-    // background-color: #ecebeb;
-    
+    } 
 }
-.del-f{
+.delete{
     width: 30%;
     text-align: left;
     display: block;
-    // margin-bottom: 10px;
     float: left;
     font-size: 15px;
 }
 
-@media screen and (max-width: 820px) {
-    .app{
-        width: 100%;
+.folder-main{
+    display: block;
+    width: 96%;
+    float: left;
+    height: auto;
+    text-align: left;
+    background-color: #ecebeb;
+    padding: 0 2% 2% 2%;
+    .folder-style{
+        background-color: rgb(224, 224, 224);
+        padding-top: 10px;
     }
-    .s-c{
-        width: 100%;
+    h1{
+        margin: 30px 0px;
+    }
+    .tree-folder{
+        width: 25%;
+        display: inline-block;
+        border: solid 1px #ccc9c9;
+        border-radius: 6px;
+    }
+}
+.action{
+    width:70%;
+    display: block;
+    float: right;
+        
         .create{
-            a{
-                font-size: 12px;
-            }
+            float: right;
+            padding: 0;
+            margin: 0;
+            button{
+                color: #1677ff;
+                border: 1px solid #1677ff;
+            } 
+        }
+        .search-folder{
+            float: left;
+            margin-bottom: 10px;
         }
         .search{
-            width: 200px;
+            float: right;
+            width: 240px;
+            margin-right: 10px
+        }         
+}
+
+.tree-table{
+    width: 96%;
+    display: inline-block;
+    background-color: #fff;
+    padding: 2%;
+    margin-top: 10px;
+}
+
+.table-folder{
+    display: block;
+    width: 70%;
+    float: right;
+    border: 1px solid #dbd8d8;
+    padding: 10px;
+    table{
+        background-color: #e7e7e7;
+        margin-top: 10px;
+        th{
+            font-size: 17px;
         }
+    }
+}
+
+.edit-create{
+    width: 70%;
+    text-align: left;
+    margin-left: 100px;
+    background-color: #ecebeb;
+    h1{
+        text-align: center;
+        margin-left: 200px;
+        padding: 30px 0px;
+    }
+    form{
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 820px){
+    .folder-main{
+        width: 100%;
+        padding: 0;
+        h1{
+            font-size: 25px;
+        }
+    }
+    .c-c{
+        width: 70%;
+        
+    .search{
+        width: 160px;
+    }
+    .create{
+        a{
+            font-size: 12px;
+        }
+        
+    }
+    }
+    .tree-table{
+        width: 96%;
+    }
+    .tree-folder{
+        width: 25%;
+        padding: 0;
+        .folder-style{
+            padding: 0;
+        }
+    }
+    .table-folder{
+        width: 70%;
     }
     .del-f{
         width: 30%;
