--- a/client/app/src/pages/home/_pages.scss
+++ b/client/app/src/pages/home/_pages.scss
@@ -1,9 +1,9 @@
 .table-style{
-    width: 96%;
+    width: 98%;
     display: block;
     height: auto;
     float: left;
-    padding: 2% ;
+    padding: 1% ;
     margin: auto;
     background-color: #ecebeb;
     button{
@@ -19,7 +19,8 @@
     } 
     h1{
        text-align: left;
-       margin-bottom: 10px;
+       margin: 0;
+       margin-bottom: 15px;
       
     } 
 }
@@ -43,24 +44,38 @@
 
 .folder-main{
     display: block;
-    width: 96%;
+    width: 98%;
     float: left;
     height: auto;
     text-align: left;
     background-color: #ecebeb;
-    padding: 0 2% 2% 2%;
+    padding: 1%;
     .folder-style{
         background-color: rgb(224, 224, 224);
-        padding-top: 10px;
+        padding: 10px 0;
     }
     h1{
-        margin: 30px 0px;
+        margin: 0;
     }
     .tree-folder{
-        width: 25%;
+        width: 20%;
         display: inline-block;
-        border: solid 1px #ccc9c9;
         border-radius: 6px;
+    }
+    .table-folder{
+        display: block;
+        width: 76%;
+        float: right;
+        border: 1px solid #dbd8d8;
+        border-radius: 10px;
+        padding: 10px;
+        table{
+            background-color: #e7e7e7;
+            margin-top: 10px;
+            th{
+                font-size: 17px;
+            }
+        }
     }
 }
 .action{
@@ -77,14 +92,12 @@
                 border: 1px solid #1677ff;
             } 
         }
-        .search-folder{
-            float: left;
-            margin-bottom: 10px;
-        }
         .search{
             float: right;
-            width: 240px;
-            margin-right: 10px
+            margin-right: 10px;
+            input{
+                border: 1px solid #1677ff;
+            }
         }         
 }
 
@@ -94,21 +107,6 @@
     background-color: #fff;
     padding: 2%;
     margin-top: 10px;
-}
-
-.table-folder{
-    display: block;
-    width: 70%;
-    float: right;
-    border: 1px solid #dbd8d8;
-    padding: 10px;
-    table{
-        background-color: #e7e7e7;
-        margin-top: 10px;
-        th{
-            font-size: 17px;
-        }
-    }
 }
 
 .edit-create{
