--- a/client/app/src/components/layout/_layout.scss
+++ b/client/app/src/components/layout/_layout.scss
@@ -1,115 +1,30 @@
-*{
+
+* {
     margin: 0;
     padding: 0;
     border: 0;
+    box-sizing: border-box;
 }
-.app{
+
+.app {
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
-    background-color: #fff;  
-}
-
-.PageNotFound{
-    width: 100%;
-    height: 70vh;
-    padding-top: 30vh;
-    text-align: center;
-    p{
-        font-size: 70px;
-        font-weight: bold;
-    }
-}
-
-html, body {
-    height: 100%;
-    margin: 0;
-}
-
-.container {
-    width: 100%;
-    display: block;
-    height: auto;
-    flex: 1;
-    box-sizing: border-box;
-    position: relative;
-    background-color: #ecebeb;
-}
-
-.sider_style{
-    width: 15%;
-    height: 100%;
-    text-align: center;
-    float: left;
-    background-color: #fff; 
-}
-.content_style {
-    display: block;
-    float: right;
-    width: 85%;
-    margin: 0;
-    height: auto;
-    text-align: center;
-    background-color: #ecebeb;
-    h1{
-        text-align: left;
-        margin-top: 20px;
-        margin-left: 15px;
-    }
-    .title-link{
-        text-align: left;
-        margin-left: 15px;
-        margin-top: 10px;
-        a{
-            text-decoration: none;
-            color: #333;
-            font-size: 20px;
-        }
-        :first-child{
-            font-weight: bold;
-            font-size: 21px;
-        }
-    }
-} 
-
-.footer {
-    width: 100%;
-    background-color: #757474;
-    text-align: center;
-    color: #fff;
-    font-size: 25px;
-    line-height: 80px;
-    margin-top: auto;
-}
-
-.menu-header{
-    width: 100%;
-    margin: auto;   
+    min-height: 100vh;
     background-color: #fff;
-    font-size: 17px;
-    font-weight: bold;
-    text-align: left;
-        a{
-            font-size: 17px;
-            font-weight: bold;
-            margin: auto;
-        }
 }
 
 .header{
     width: 100%;
-    height: auto;
-    margin: auto;
-    display: flex;
     background-color: #757474;
-    padding: 0;
-    top: 0;
-    left: 0;
-    line-height: 80px;
+    display: flex;
+    align-items: center;
+    line-height: 75px;
     position: sticky;
     top: 0;
     z-index: 999;
+    
     .nav_center{
         width:50%;
         text-align: right;
@@ -158,19 +73,74 @@ html, body {
     }
 }
 
-  
-@media screen and (max-width: 820px) {
-    .app{
-        display: block;
-        min-height: 100vh;
-        height: auto;
+.menu-header{
+    width: 100%;
+    background-color: #fff;
+    text-align: left;
+    overflow-y: auto;
+    max-height: calc(100vh - 104px);
+    scrollbar-width: thin;
+        a{
+            font-size: 17px;
+            font-weight: bold;
+        }
+        .submenu{
+            span{
+                font-size: 17px;
+                font-weight: bold;
+                margin: auto;
+            }
+        }
+}
+
+.container {
+    display: flex;
+    flex: 1;
+}
+
+.sider_style {
+    width: 20%;
+    background-color: #fff;
+    max-height: calc(94vh - 75px);
+    position: sticky;
+    top: 100px;
+    padding-top: 20px;
+}
+
+.content_style {
+    width: 80%;
+    background-color: #ecebeb;
+    display: flex;
+    flex-direction: column;
+} 
+
+.PageNotFound{
+    width: 100%;
+    height: 70vh;
+    padding-top: 30vh;
+    text-align: center;
+    p{
+        font-size: 70px;
+        font-weight: bold;
     }
-    
+}
+
+.footer {
+    width: 100%;
+    background-color: #757474;
+    text-align: center;
+    color: #fff;
+    font-size: 25px;
+    line-height: 80px;
+    margin-top: auto;
+}
+
+@media screen and (max-width: 1024px) {
+      
     .header{
         width: 100%;
         .nav_icon{
             width: 20%; 
-            padding: 0;
             a{
                 font-size: 25px;
             }
@@ -179,10 +149,8 @@ html, body {
             width: 50%;
             ul{
                 li{
-                    padding-right: 10px;
                     a{
                         font-size: 17px;
-                        padding: 0;
                     }
                 }
             }
@@ -191,47 +159,102 @@ html, body {
             width: 30%;
             ul{
                 li{
-                    padding-right: 10px;
+                    // padding-right: 10px;
                     a{
-                        font-size: 13px;
+                        font-size: 15px;
                     }
                 }
             }
         }
     }
     .menu-header{
-        line-height: 30px;
+        a{
+            font-size: 15px;
+        }
+        .submenu{
+            span{
+                font-size: 15px;
+            }
+        }
     }
 
     .sider_style {
-        width: 100%;
+        width: 25%;
         font-size: 14px; 
         padding-bottom: 30px;
     }
-    .table-style{
+
+    .content_style{
+        width: 75%;
+        padding: 0;
+    }
+    
+}
+
+@media screen and (max-width: 430px){
+    .app{
+        display:inline-block;
         width: 100%;
+        height: auto;
+    }
+    .header{
+        width: 100%;
+        line-height: 30px;
+        .nav_icon{
+            width: 20%;
+            padding: 0;
+            padding-left: 5px;
+
+            a{
+                font-size: 20px;
+            }
+        }
+        .nav_center{
+            width: 50%;
+            padding: 0;
+            ul{
+                li{
+                    padding: 5px;
+                    a{
+                        font-size: 15px;
+                    }
+                }
+            }
+        }
+        .nav_right{
+            width: 30%;
+            ul{
+                padding: 0;
+                li{
+                    display: block;
+                    text-align: center;
+                    padding: 0;
+                    a{
+                        font-size: 14px;
+                    }
+                }
+            }
+        }
     }
     .container{
+        display: block;
+    }
+    .sider_style{
         width: 100%;
-        flex: 1;
-        box-sizing: border-box;
-        position: relative;
-        padding-bottom: 50px;
+        display: inline-block;
+        // padding: 0;
     }
     .content_style{
+        display: block;
         width: 100%;
-        padding: 0;
+        float: right;
+        h1{
+            font-size: 20px;
+        }
     }
     .footer{
+        display: block;
         width: 100%;
-        bottom: 0;
-    }
-    .table-style{
-        background-color: #fff;
-        padding: 0;
-        h1{
-            padding-top: 30px;
-            font-size: 25px;
-        }
+        line-height: 40px;
     }
 }
