--- a/client/app/src/pages/_pages.scss
+++ b/client/app/src/pages/_pages.scss
@@ -1,59 +1,36 @@
 
 
-.table-style{
+.main-style{
     width: 100%;
     display: block;
     height: auto;
     float: left;
     padding: 2% ;
-    margin: 0;
     background-color: #ecebeb;
-    button{
-        text-align: left;
+   
+    .table-main{
+        display: block;
+        margin-top: 10px;
+        width: 100%;
+        float: right;
+        table{
+            border: 1px solid #cac5c5;
+            margin: auto;
+            background-color: #fff;
+            margin-top: 10px;
+            th{
+                font-size: 17px;
+            }    
+        } 
     }
-    table{
-        border: 1px solid #cac5c5;
-        margin: auto;
-        background-color: #fff;
-        th{
-            font-size: 17px;
-        }    
-    } 
+    
     h1{
        text-align: left;
        margin: 0;
        margin-bottom: 15px;
-       padding: 0;
+       padding: 0; 
       
     } 
-}
-
-.table-main{
-    display: block;
-    margin-top: 10px;
-    width: 100%;
-    float: right;
-    table{
-        margin-top: 10px;
-    } 
-}
-.delete{
-    width: 100%;
-    text-align: left;
-    display: block;
-    float: left;
-    font-size: 15px;
-}
-
-.folder-main{
-    display: block;
-    width: 100%;
-    float: left;
-    height: auto;
-    text-align: left;
-    background-color: #ecebeb;
-    padding: 2%;
-
     .tree-table{
         width: 100%;
         display: inline-block;
@@ -64,13 +41,10 @@
     }
 
     .folder-style{
-        background-color: rgb(224, 224, 224);
+        background-color: rgb(230, 230, 230);
         padding: 10px 0;
     }
-    h1{
-        margin: 0;
-        margin-bottom: 15px;
-    }
+
     .tree-folder{
         width: 20%;
         display: inline-block;
@@ -84,14 +58,23 @@
         border-radius: 10px;
         padding: 10px;
         table{
-            background-color: #e7e7e7;
             margin-top: 10px;
             th{
                 font-size: 17px;
+                background-color: rgb(230, 230, 230);
             }
         }
     }
 }
+
+.delete{
+    width: 100%;
+    text-align: left;
+    display: block;
+    float: left;
+    font-size: 15px;
+}
+
 .action{
     width:100%;
     display: block;
@@ -132,14 +115,7 @@
 
 @media screen and (max-width: 1024px){
 
-    .table-style{
-        h1{
-            font-size: 25px;
-        }
-    }
-    .folder-main{
-        width: 100%;
-        // padding: 0;
+    .main-style{
         h1{
             font-size: 25px;
         }
@@ -164,27 +140,12 @@
 }
 
 @media screen and (max-width: 430px){
-    .table-style{
+    .main-style{
         width: 100%;
         padding: 0;
         h1{
             font-size: 20px;
             margin: 0;
-        }
-        .delete{
-            margin-bottom: 10px;
-            button{
-                font-size: 12px;
-                padding: 0 10px;
-                
-            }
-        }
-    }
-    .folder-main{
-        display: block;
-        width: 100%;
-        h1{
-            font-size: 20px;
         }
         .delete{
             margin-bottom: 10px;
@@ -217,6 +178,7 @@
             }
         }
     }
+   
     .table-main{
         table{
             margin: 0;
