--- a/client/app/src/pages/_pages.scss
+++ b/client/app/src/pages/_pages.scss
@@ -6,7 +6,7 @@
     height: auto;
     float: left;
     padding: 2% ;
-    background-color: #ecebeb;
+    background-color: #f3f3f3;
    
     .table-main{
         display: block;
