--- a/client/app/src/components/layout/_layout.scss
+++ b/client/app/src/components/layout/_layout.scss
@@ -111,7 +111,7 @@
 
 .content {
     width: 80%;
-    background-color: #ecebeb;
+    background-color: #f3f3f3;
     display: flex;
     flex-direction: column;
 } 
